<resources>
    <string name="app_name">Wakatime</string>
    <string name="please_enter_your_wakatime_api_key">Please, enter your\nWakatime API key.</string>
    <string name="api_key">API KEY</string>
    <string name="button">Button</string>
    <string name="accept">Accept</string>
    <string name="avatar">Avatar</string>
    <string name="languages">Languages</string>
    <string name="editors">Editors</string>
    <string name="operating_systems">Operating systems</string>
    <string name="daily_average">Daily average</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_coding_activity">Last coding activity</string>
    <string name="total_day_time">Total day time</string>
</resources>