<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C3E50"
    android:elevation="8dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="64dp"
        android:background="@drawable/dialog_corners"
        android:elevation="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/dialog_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_wakatime_api_key"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/api_key_input"
            android:layout_width="168dp"
            android:layout_height="match_parent"
            android:hint="@string/api_key"
            android:textColorHint="@color/gray_400"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            tools:passwordToggleDrawable="@drawable/ic_visibility_white_24dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:hint="@string/api_key"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="#00FFFFFF"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/accept_key"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/buttton"
            android:elevation="4dp"
            android:padding="0dp"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/avatar"
                android:scaleType="fitXY"
                tools:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_languages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>

</LinearLayout>